...
        tableView.delegate = self
        tableView.register(ReadingMeterTableViewCell.self, forCellReuseIdentifier: "ReadingMeterCell")
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 80
        tableView.backgroundColor = .clear
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.accessibilityIdentifier = "ReadingsMain.tableView"
        return tableView
    }()

    private lazy var dataSource: UITableViewDiffableDataSource<ReadingsMainSection, MRKMeter> = {
        let dataSource = UITableViewDiffableDataSource<ReadingsMainSection, MRKMeter>(tableView: tableView) { [weak self] tableView, indexPath, meter in
            let cell = tableView.dequeueReusableCell(withIdentifier: "ReadingMeterCell", for: indexPath) as! ReadingMeterTableViewCell
...
